--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "next": "13.4.9",
         "next-themes": "^0.2.1",
         "postcss": "8.4.25",
-        "prettier": "^3.0.0",
+        "prettier": "2.8.8",
         "prettier-plugin-tailwindcss": "^0.3.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
