--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@mdx-js/loader": "^2.3.0",
+        "@mdx-js/react": "^2.3.0",
+        "@next/mdx": "^13.4.9",
         "@radix-ui/react-dropdown-menu": "^2.0.5",
+        "@types/mdx": "^2.0.5",
         "@types/node": "20.4.1",
         "@types/react": "18.2.14",
         "@types/react-dom": "18.2.6",
