--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "@mdx-js/loader": "^2.3.0",
         "@mdx-js/react": "^2.3.0",
         "@next/mdx": "^13.4.9",
+        "@radix-ui/react-avatar": "^1.0.3",
         "@radix-ui/react-dropdown-menu": "^2.0.5",
+        "@radix-ui/react-hover-card": "^1.0.6",
         "@types/mdx": "^2.0.5",
         "@types/node": "20.4.1",
         "@types/react": "18.2.14",
