--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@radix-ui/react-avatar": "^1.0.3",
         "@radix-ui/react-dropdown-menu": "^2.0.5",
         "@radix-ui/react-hover-card": "^1.0.6",
+        "@tailwindcss/typography": "^0.5.9",
         "@types/mdx": "^2.0.5",
         "@types/node": "20.4.1",
         "@types/react": "18.2.14",
